--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "webpack --watch"
   },
   "dependencies": {
+    "babel-core": "^6.24.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "6.9.0",
     "babel-preset-es2015": "^6.6.0",
